--- a/WeChatExtension/WeChatExtension/Sources/WindowControllers/About/TKAboutWindowController.xib
+++ b/WeChatExtension/WeChatExtension/Sources/WindowControllers/About/TKAboutWindowController.xib
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17156" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17156"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="TKAboutWindowController">
             <connections>
                 <outlet property="WeChatPayImageView" destination="l1E-pJ-Jsx" id="KPn-cL-bQf"/>
-                <outlet property="WeiboLabel" destination="3LV-xw-q9v" id="ffj-6n-Fur"/>
                 <outlet property="aliPay" destination="NBx-hp-UM9" id="aQI-nr-Fnb"/>
                 <outlet property="homePageTitleLabel" destination="rOg-r0-aZC" id="Yud-lZ-27u"/>
                 <outlet property="projectHomepageLabel" destination="rOg-r0-aZC" id="G6y-Pe-VLs"/>
@@ -24,13 +23,13 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="240" width="480" height="400"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="900"/>
             <view key="contentView" wantsLayer="YES" id="se5-gp-TjO">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="400"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sr5-5O-c5V">
-                        <rect key="frame" x="170" y="353" width="141" height="27"/>
+                        <rect key="frame" x="170" y="353" width="140" height="27"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="27" id="N01-9z-FKb"/>
                         </constraints>
@@ -88,25 +87,6 @@
                         </constraints>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="DWb-lu-csg"/>
                     </imageView>
-                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9bt-fv-6EG">
-                        <rect key="frame" x="162" y="35" width="77" height="16"/>
-                        <buttonCell key="cell" type="bevel" title="MustangYM" bezelStyle="regularSquare" alignment="left" imageScaling="proportionallyDown" inset="2" id="mrz-f2-xVL">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
-                        </buttonCell>
-                        <color key="contentTintColor" name="systemBlueColor" catalog="System" colorSpace="catalog"/>
-                        <connections>
-                            <action selector="didClickWeiBo:" target="-2" id="z93-99-vJs"/>
-                        </connections>
-                    </button>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3LV-xw-q9v">
-                        <rect key="frame" x="102" y="35" width="54" height="16"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Weibo :" id="5Z4-Ie-98i">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l1E-pJ-Jsx">
                         <rect key="frame" x="248" y="90" width="180" height="180"/>
                         <constraints>
@@ -116,17 +96,9 @@
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="6PZ-eP-FR6"/>
                     </imageView>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mFp-aX-qYb">
-                        <rect key="frame" x="129" y="10" width="223" height="15"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" title="小助手完全免费, 不在任何三方平台售卖!" id="bP3-De-Fff">
-                            <font key="font" metaFont="system" size="12"/>
-                            <color key="textColor" red="0.66660702230000002" green="0.66670489310000003" blue="0.66658556459999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="W9K-Dc-V3M">
-                        <rect key="frame" x="257" y="36" width="106" height="15"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" title="QQ群: 741941325" id="bDk-Z8-tgm">
-                            <font key="font" metaFont="system" size="12"/>
+                        <rect key="frame" x="147" y="10" width="187" height="15"/>
+                        <textFieldCell key="cell" lineBreakMode="clipping" title="完全免费, 不在任何三方平台售卖!" id="bP3-De-Fff">
+                            <font key="font" metaFont="cellTitle"/>
                             <color key="textColor" red="0.66660702230000002" green="0.66670489310000003" blue="0.66658556459999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
@@ -134,12 +106,8 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="otL-9x-BRK" firstAttribute="top" secondItem="sr5-5O-c5V" secondAttribute="bottom" constant="8" id="Akw-ea-JPC"/>
-                    <constraint firstItem="9bt-fv-6EG" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" constant="-40" id="Dh2-0f-fnn"/>
                     <constraint firstItem="mFp-aX-qYb" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" id="FQm-Sl-xcQ"/>
                     <constraint firstItem="eVa-As-gXF" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" id="HRi-oh-1kL"/>
-                    <constraint firstItem="9bt-fv-6EG" firstAttribute="leading" secondItem="3LV-xw-q9v" secondAttribute="trailing" constant="8" id="OGV-sR-w6w"/>
-                    <constraint firstItem="W9K-Dc-V3M" firstAttribute="centerY" secondItem="9bt-fv-6EG" secondAttribute="centerY" id="OSo-1M-2GL"/>
-                    <constraint firstItem="W9K-Dc-V3M" firstAttribute="leading" secondItem="9bt-fv-6EG" secondAttribute="trailing" constant="20" id="Oue-rb-mr8"/>
                     <constraint firstItem="NBx-hp-UM9" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="52" id="SZE-GW-DDk"/>
                     <constraint firstItem="eVa-As-gXF" firstAttribute="top" secondItem="otL-9x-BRK" secondAttribute="bottom" constant="8" id="ZvN-Sb-aXv"/>
                     <constraint firstItem="l1E-pJ-Jsx" firstAttribute="top" secondItem="eVa-As-gXF" secondAttribute="bottom" constant="35" id="aEL-Kp-7en"/>
@@ -151,8 +119,6 @@
                     <constraint firstItem="NBx-hp-UM9" firstAttribute="top" secondItem="eVa-As-gXF" secondAttribute="bottom" constant="35" id="rgt-W9-cYX"/>
                     <constraint firstItem="eVa-As-gXF" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" id="t9k-eG-moW"/>
                     <constraint firstAttribute="trailing" secondItem="l1E-pJ-Jsx" secondAttribute="trailing" constant="52" id="unr-XB-oxh"/>
-                    <constraint firstItem="3LV-xw-q9v" firstAttribute="centerY" secondItem="9bt-fv-6EG" secondAttribute="centerY" id="vzl-yT-24L"/>
-                    <constraint firstAttribute="bottom" secondItem="9bt-fv-6EG" secondAttribute="bottom" constant="35" id="xZw-2m-6Qi"/>
                 </constraints>
             </view>
             <connections>
